--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ span.num1 {
 }
 
 span.text {
-    font-family: "Doto";
+    font-family: "Josefin Sans";
     color:#e0e0e0;
     font-size: 1.7em;
     text-align: center;
