--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
-
-
 body{
     margin: 0;
     background-color: black;
     font-family: "monospace";
-    color:rgb(255, 255, 255);
+    color: white;
     scroll-behavior: smooth;
 }
 
@@ -18,102 +16,37 @@ body{
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     position: relative;
     transform-style: preserve-3d;
 }
 
+a{
+    text-decoration: none;
+  }
+ 
 
-/**/
-
-
-.wrapper{
+.content{
+   
     position:absolute;
-  
-    bottom: 125px;
-    width: 80vh;
-    height: 100px;
-    display: flex;
-    justify-content: space-around;
-    gap: 10px;
-}
-
-.num{
-width: 14vmin;
-height: 14vmin;
-
-display: flex;
-flex-direction: column;
-justify-content: space-around;
-padding: 1em 0;
-position: relative;
-font-size: 16px;
-border-radius: 0.5em;
-border-bottom: 10px solid #8f958fe9;
-}
-
-span.num1 {
-    font-family: "Doto";
-    color:#ffffff;
-    display: grid;
-    place-items: center; 
-    font-weight: 600;
-    font-size: 3.5em;
-}
-
-span.text {
+    
+    font-weight:1000 ;
     font-family: "Josefin Sans";
-    color:#e0e0e0;
-    font-size: 1.7em;
-    text-align: center;
-    pad: 0.7em 0;
-    font-weight: 600;
-    line-height: 0;
+    transform: translateZ(10px);
+    transform: translateY(-150px);
+    
 }
-
-@media screen and (max-width: 1024px) {
-    .wrapper {
-        width: 85vw;
-    }
-    .num {
-        height: 26vmin;
-        width: 26vmin;
-        font-size: 12px;
-    }
+.name{
+    text-decoration: none;
+    color: #e0e0e0;
+    font-size: xxx-large;
+    
 }
-
-
-@media screen and (max-width: 1024px) {
-    .wrapper{
-        width: 90vw;
-        flex-wrap: wrap;
-        gap: 30px;
-    }
-    .num {
-        width: calc(50% - 40px);
-        height: 30vmin;
-        font-size: 14px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .wrapper {
-        gap: 15px;
-    }
-    .num{
-        width: 100%;
-        height: 25vmin;
-        font-size: 8px;
-    }
-}
-
-/**/
-
 
 .bg{
     background-image: url(bg3.jpg);
-   filter:blur(4px);
-   opacity: 0.6;
+    filter: blur(1px);
+    opacity: 0.6;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -123,58 +56,32 @@ span.text {
 }
 
 .bg::before{
+    content: '';
     position: absolute;
     width: 100%;
-    height: 100px;
-    content: '';
+    height: 100%;
     background-image: linear-gradient(
         to top, #010001, transparent
     );
     bottom: 0;
 }
 
-.content{
-    font-weight:1000 ;
-    font-family: "Josefin Sans";
-    transform: translateZ(10px);
-    font-size: xxx-large;
-}
-
-/**/
 
 
-
-
-.container{
-    width: 1200px;
-    max-width: 100%;
-    margin: auto;
-    padding-bottom: 100px;
-}
-
-
-header{
-    position: absolute;
-    top: 0;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    width: 1200px;
-    max-width: 100%;
-    padding: 40px 0;
-}
-
-.text h1{
-    color: white;
+.texta {
+    width: 900px;
+    font-weight: bolder;
     font-family: "Doto";
+    font-size: xx-large;
+    z-index: 10;
     white-space: nowrap;
     letter-spacing: 5px;
     overflow: hidden;
-   border-right: 5px solid white;
-    animation: typing 1.5s steps(17) 1, 
+    border-right: 5px solid white;
+    animation: typing 1.5s steps(10) 1,
     caret 0.5s steps(2) infinite,
     fadeOutCaret 0.5s ease-out forwards 15s;
 }
-
 @keyframes caret{
     from{border-color: white;}
     to{border-color: transparent;}
@@ -182,7 +89,7 @@ header{
 
 @keyframes typing{
     from{width:0;}
-    to{width:100%;}
+    to{width:50%;}
 }
 
 @keyframes fadeOutCaret {
@@ -190,86 +97,49 @@ header{
     to { border-color: transparent; }
 }
 
-header .signin{
+
+.wrapper{
+    position: absolute;
+    bottom: 220px;
+    width: 80vh;
+    height: 100px;
     display: flex;
-    justify-content: end;
-    align-items: center;
+    justify-content: space-around;
+    gap: 10px
 }
 
-header button{
-    background-color: rgb(140, 140, 140);
-    color: white;
-    padding: 10px 20px;
-    border-radius: 20px;
-}
-
-
-
-/**/
-
-nav ul{
-    list-style:none;
+.num{
+    width: 14vmin;
+    height: 14vmin;
+    
     display: flex;
-    justify-content: end;
-}
-nav ul li{
-    padding:10px;
-}
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 1em 0;
+    position: relative;
+    font-size: 16px;
+    border-radius: 0.5em;
+    border-bottom: 10px solid #ffb700;
+    }
 
-/**/
+    span.num1 {
+        font-family: "Doto";
+        color:#ffffff;
+        display: grid;
+        place-items: center; 
+        font-weight: 600;
+        font-size: 3.5em;
+    }
 
-.library{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 100px);
-    margin-top: 100px;
-    column-gap: 20px;
-    row-gap: 20px;
-}
-
-.library .item{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-     /*
-    background-image: url();
-    background-size: cover;
-    */
-    transition: 0.5s;
-    opacity: 0.5;
-    transition-delay: 0.3s;
-}
-
-.library .item:nth-child(2){
-    /*background-image: url();*/
-     transition-delay: 0.3s;
-}
-.library .item:nth-child(3){
-    /*background-image: url();*/
-     transition-delay: 0.7s;
-}
-.library .item:nth-child(4){
-   /*background-image: url();*/
-     transition-delay: 0.7s;
-}
+    span.text {
+        font-family: "Josefin Sans";
+        color:#e0e0e0;
+        font-size: 1.7em;
+        text-align: center;
+        pad: 0.7em 0;
+        font-weight: 600;
+        line-height: 0;
+    }
 
 
-
-/**/
-
-.des{
-    width: 100%;
-    text-align: center;
-    margin: 100px auto;
-    transition: 0.5s;
-    transform: translateY(20px);
-    opacity: 0;
-}
-
-.library.active .item{
-    opacity: 1;
-}
-.des.active{
-    opacity: 1;
-    transform: translateY(0px);
-}
+    
