--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
-body{
+html , body{
     margin: 0;
     background-color: black;
     font-family: "monospace";
     color: white;
-    
+    scroll-behavior:smooth;
+    width: 100%;
+    height: 100%;
+   
+    zoom: 100%;
 }
 
-html {
-    scroll-behavior:smooth;
-}
 
 .container-fluid{
     height: 100vh;
