--- a/ourservices.css
+++ b/ourservices.css
@@ -20,11 +20,13 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
-   background-color: #1851a0b1;
+   width: 100%;
    height: 170vh;
    position: relative;
    overflow: hidden;
 }
+
+
 
 .containerServices {
    position: relative;
@@ -47,9 +49,27 @@
 
 .slide .item.active {
    animation: fullScreenToCard 0.5s forwards;
-  
+   transition: 0.5s ease;
    opacity: 1;
 }
+.content1{
+ 
+transition: 0.2s;
+}
+.slide .item:hover .content1 {
+transform: scale(1.3);
+box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+}
+
+.slid .item:hover .shadow{
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.849);
+}
+
+.slide .item:hover .image{
+  transform: scale(0.9);
+}
+
+
 
 
 
@@ -78,10 +98,12 @@
    text-shadow: 
      1px 1px 2px black, /* Outer shadow for depth */
      2px 2px 4px rgba(0, 0, 0, 0.5); 
+     transition: 0.5s;
 }
+
 .image {
    position: relative;
-  
+   transition: 0.5s ease;
    background-size: cover;
    display: flex;
    flex-direction: column;
@@ -128,7 +150,7 @@ z-index: -10; }
  
  .name1 {
 
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
   
 
@@ -154,7 +176,7 @@ z-index: -10; }
  .des1 {
   
 
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
    
    position: absolute;
@@ -176,7 +198,7 @@ z-index: -10; }
 
  .name2 {
 
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 font-size: 31px;
    position: absolute;
    top: -10%; 
@@ -200,7 +222,7 @@ font-size: 31px;
  
  .des2 {
 
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
    position: absolute;
   
@@ -221,7 +243,7 @@ font-size: 31px;
  
  .name3{
 
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
    position: absolute;
    top: -5%; 
@@ -246,7 +268,7 @@ font-size: 31px;
 
  .des3{
 
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
    position: absolute;
   
@@ -266,7 +288,7 @@ font-size: 31px;
  }
 
  .name4{
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
    
    font-size: 45px;
   
@@ -292,7 +314,7 @@ font-size: 31px;
 
  .des4{
 
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
  
    
@@ -315,7 +337,7 @@ font-size: 19px;
 
 
  .name6{
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
  
 
@@ -339,7 +361,7 @@ font-size: 19px;
  }
 
  .des6{
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
  font-size: 20px;
    
@@ -360,7 +382,7 @@ font-size: 19px;
  }
 
  .name7{
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
  
 
@@ -384,7 +406,7 @@ font-size: 19px;
  }
 
  .des7{
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
    font-size: 20px;
      
@@ -405,7 +427,7 @@ font-size: 19px;
  }
 
  .name5{
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
  
 
@@ -428,7 +450,7 @@ font-size: 19px;
      2px 2px 4px rgba(0, 0, 0, 0.5); 
  }
  .des5{
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.849);
 
    font-size: 20px;
      
@@ -520,4 +542,12 @@ font-size: 19px;
        font-size: 8px;
        padding: 2px;
    }
+}
+
+
+.backgroundServices{
+  width: 100%;
+
+  background-color: #cfcfcf;
+ 
 }
