--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 html , body{
     margin: 0;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     font-family: "monospace";
-    color: white;
+    color: rgb(255, 255, 255);
     scroll-behavior:smooth;
     width: 100%;
     height: 100%;
@@ -53,7 +53,7 @@ a{
 .bg{
     background-image: url(bg3.jpg);
     filter: blur(1px);
-    opacity: 0.6;
+    
     position: absolute;
     width: 100%;
     height: 100%;
